[package]
name = "sui-sandbox"
version = "0.1.0"
edition = "2021"
author = "Jan Rock / rock@linux.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sui-sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk"}
sui-keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys"}
shared-crypto = { git = "https://github.com/mystenlabs/sui", package = "shared-crypto"}
sui-types = { git = "https://github.com/mystenlabs/sui", package = "sui-types"}
tokio = { version = "1.2", features = ["full"] }
anyhow = "1.0"
sha2 = "0.10.8"
bcs = "0.1.4"
rand = "0.8.5"
fastcrypto = "0.1.7"

[[bin]]
name = "01_transaction"
path = "src/01_transaction/bin/main.rs"